# simplejson

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cppcheck.suppress
.github/workflows/: ci.yml
cmake/: Warnings.cmake
examples/: array_example.cpp  iter_example.cc  iter_example.cpp  json_example.cc  json_example.cpp  large_example.cc  large_example.cpp  load_example.cc  load_example.cpp  prim_example.cc  prim_example.cpp  readme.cc  test.json
include/: simplejson.h
test/: test.cc  tester.cpp
test/cases/: ast.json  test.json
